Disallow canceling of progress reports for all users, and change the set of actions to not include `Cancel` in that case.